--- a/src/assets/css/header.css
+++ b/src/assets/css/header.css
@@ -42,6 +42,7 @@ h2 {
 @media (min-width: 1200px) {
   h2 {
     padding: 63px 0;
+    font-size: 36px;
   }
 }
 
@@ -57,116 +58,28 @@ p {
   line-height: 150%;
 }
 
-.header__content {
-  height: 100%;
-  color: #ffffff;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100vw;
-  flex-direction: column;
-  padding: 5vh 0;
-}
-@media (min-width: 1200px) {
-  .header__content {
-    height: 100vh;
-    position: relative;
-    margin-top: 0;
-    padding: 0;
-  }
-}
-.header__content h1 {
-  font-weight: bold;
-  font-size: 5vmin;
-  line-height: 6vmin;
-  letter-spacing: 0.05em;
-  text-transform: uppercase;
-  text-align: center;
-  display: none;
-}
-@media (min-width: 992px) {
-  .header__content h1 {
-    display: block;
-    left: 431px;
-    top: 257px;
-    margin-top: 2em;
-  }
-}
-@media (min-width: 1200px) {
-  .header__content h1 {
-    position: absolute;
-    width: 578px;
-    height: 86px;
-    left: 431px;
-    top: 257px;
-    font-size: 72px;
-    line-height: 86px;
-    display: flex;
-    align-items: center;
-    letter-spacing: 0.05em;
-    text-transform: uppercase;
-    color: #ffffff;
-    margin: 0;
-  }
-}
-.header__content p {
-  font-size: 20px;
-  line-height: 150%;
-  text-align: center;
-  font-weight: 600;
-  margin: 39px;
-}
-@media (min-width: 1200px) {
-  .header__content p {
-    width: 540px;
-    height: 124px;
-    left: 450px;
-    top: 382px;
-    font-size: 24px;
-    position: absolute;
-    margin: 0;
-  }
-}
-.header__content a {
-  margin-bottom: 4vw;
-}
-.header__content button {
-  text-align: center;
-  text-transform: uppercase;
-  width: 160px;
-  height: 50px;
-  background: #ffffff;
-  border-radius: 6px;
-  font-weight: 600;
-  font-size: 14px;
-  line-height: 17px;
-  color: #ed4c5c;
-  line-height: 150%;
-}
-@media (min-width: 1200px) {
-  .header__content button {
-    left: 640px;
-    top: 545px;
-    position: absolute;
-  }
-}
-
 #features {
   background: #fafafa;
 }
 
-.features,
-.technology {
+.features {
   color: #101010;
   padding-bottom: 10vh;
   margin: 0 auto;
-  flex-wrap: wrap;
+  max-width: 1600px;
+}
+@media (min-width: 768px) {
+  .features .responsive-slick {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
 }
 @media (min-width: 1200px) {
-  .features,
-.technology {
+  .features {
     padding-bottom: 124px;
     width: 90vw;
+    display: block;
   }
 }
 
@@ -183,7 +96,7 @@ p {
 @media (min-width: 1200px) {
   .feature__item {
     width: 350px;
-    padding: 0;
+    padding: 0 15px;
   }
 }
 .feature__item .feature__item--image {
@@ -211,9 +124,21 @@ p {
 
 .technology {
   color: #101010;
+  padding-bottom: 10vh;
+  margin: 0 auto;
+  max-width: 1600px;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  flex-wrap: wrap;
+}
+@media (min-width: 1200px) {
+  .technology {
+    height: 338px;
+    padding-bottom: 124px;
+    padding-left: 165px;
+    padding-right: 165px;
+  }
 }
 .technology .technology__item {
   text-align: center;
@@ -272,6 +197,8 @@ p {
 .red-section,
 .contact-section {
   padding: 5vw;
+  max-width: 1600px;
+  margin: 0 auto;
 }
 @media (min-width: 992px) {
   .red-section,
@@ -354,12 +281,18 @@ p {
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  padding: 1vw;
+  padding: 2vw;
 }
 .footer-section img {
   width: 30%;
   margin: 0 auto;
   border-radius: 6px;
+}
+.footer-section p {
+  margin-top: 2vw;
+}
+.footer-section span {
+  font-size: 12px;
 }
 
 :root {
@@ -414,7 +347,7 @@ body {
 }
 
 .active {
-  font-weight: bolder;
+  font-weight: 700;
 }
 
 /* HEADER
@@ -432,7 +365,7 @@ header {
 }
 @media (min-width: 1200px) {
   header {
-    height: 100vh;
+    height: 782px;
   }
 }
 header::after {
@@ -523,13 +456,13 @@ header::after {
 }
 .page-header .panel1 {
   width: 100%;
-  background: #dd4d64;
+  background: #ca1f44;
   transition-delay: 0.3s;
   z-index: 100;
 }
 .page-header .panel2 {
   width: calc(100% - 3rem);
-  background: #d52047;
+  background: #c21d41;
   transition-delay: 0.1s;
   z-index: 100;
 }
@@ -543,9 +476,11 @@ header::after {
 }
 .page-header .top-menu a {
   font-size: 14px;
+  transition: color 0.3s ease;
 }
 .page-header .top-menu a:hover {
   color: #101010;
+  font-weight: bolder;
 }
 .page-header .top-menu-wrapper.show-offcanvas::before {
   background: var(--overlay);
@@ -577,10 +512,11 @@ header::after {
   display: inline-block;
   font-size: 1.3rem;
   text-transform: uppercase;
-  transition: color 0.35s ease-out;
+  transition: color 0.5s ease-out;
 }
 .page-header .top-menu > li:last-child ul a:hover {
   color: #101010;
+  font-weight: 700;
 }
 .page-header .sub-menu {
   padding: 1.5rem 2rem 0;
@@ -615,6 +551,95 @@ header::after {
 }
 .page-header .socials .fa-stack .fab {
   font-size: 1.2rem;
+}
+
+.header__content {
+  height: 100%;
+  color: #ffffff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  flex-direction: column;
+  padding: 5vh 0;
+}
+@media (min-width: 1200px) {
+  .header__content {
+    height: 782px;
+    margin-top: 0;
+    padding: 0;
+  }
+}
+.header__content h1 {
+  font-weight: bold;
+  line-height: 6vmin;
+  letter-spacing: 0.05em;
+  text-transform: uppercase;
+  text-align: center;
+  display: none;
+}
+@media (min-width: 768px) {
+  .header__content h1 {
+    display: block;
+    font-size: 50px;
+    margin-top: 2em;
+  }
+}
+@media (min-width: 1200px) {
+  .header__content h1 {
+    width: 578px;
+    height: 86px;
+    font-size: 72px;
+    line-height: 86px;
+    letter-spacing: 0.05em;
+    text-transform: uppercase;
+    color: #ffffff;
+    margin-top: 140px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+}
+.header__content p {
+  font-size: 20px;
+  line-height: 150%;
+  text-align: center;
+  font-weight: 600;
+  margin: 29px;
+}
+@media (min-width: 1200px) {
+  .header__content p {
+    width: 540px;
+    top: 382px;
+    font-size: 24px;
+    margin: 39px 0;
+  }
+}
+.header__content a {
+  margin-bottom: 4vw;
+}
+.header__content button {
+  text-align: center;
+  text-transform: uppercase;
+  width: 160px;
+  height: 50px;
+  background: #ffffff;
+  border-radius: 6px;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 17px;
+  color: #ed4c5c;
+}
+.header__content button:hover {
+  background: transparent;
+  border: solid 2px #ffffff;
+  color: #ffffff;
+  font-weight: 700;
+}
+@media (min-width: 1200px) {
+  .header__content button {
+    margin: 56px 0;
+  }
 }
 
 /*# sourceMappingURL=header.css.map */
