--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -93,6 +93,7 @@ h2 {
   text-align: center;
   @include respond-to("lg") {
     padding: 63px 0;
+    font-size: 36px;
   }
 }
 h3 {
@@ -106,114 +107,29 @@ p {
   line-height: 150%;
 }
 
-//Header
-
-.header__content {
-  height: 100%;
-  color: #ffffff;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100vw;
-  flex-direction: column;
-  padding: 5vh 0;
-
-  @include respond-to("lg") {
-    height: 100vh;
-    position: relative;
-    margin-top: 0;
-    padding: 0;
-  }
-
-  h1 {
-    font-weight: bold;
-    font-size: 5vmin;
-    line-height: 6vmin;
-    letter-spacing: 0.05em;
-    text-transform: uppercase;
-    text-align: center;
-    display: none;
-
-    @include respond-to("md") {
-      display: block;
-      left: 431px;
-      top: 257px;
-      margin-top: 2em;
-    }
-
-    @include respond-to("lg") {
-      position: absolute;
-      width: 578px;
-      height: 86px;
-      left: 431px;
-      top: 257px;
-      font-size: 72px;
-      line-height: 86px;
-      display: flex;
-      align-items: center;
-      letter-spacing: 0.05em;
-      text-transform: uppercase;
-      color: #ffffff;
-      margin: 0;
-    }
-  }
-  p {
-    font-size: 20px;
-    line-height: 150%;
-    text-align: center;
-    font-weight: 600;
-    margin: 39px;
-
-    @include respond-to("lg") {
-      width: 540px;
-      height: 124px;
-      left: 450px;
-      top: 382px;
-      font-size: 24px;
-      position: absolute;
-      margin: 0;
-    }
-  }
-  a {
-    margin-bottom: 4vw;
-  }
-
-  button {
-    text-align: center;
-    text-transform: uppercase;
-    width: 160px;
-    height: 50px;
-    background: #ffffff;
-    border-radius: 6px;
-    font-weight: 600;
-    font-size: 14px;
-    line-height: 17px;
-    color: #ed4c5c;
-    line-height: 150%;
-
-    @include respond-to("lg") {
-      left: 640px;
-      top: 545px;
-      position: absolute;
-    }
-  }
-}
-
 //Main
 
 #features {
   background: $lightGrey;
 }
-.features,
-.technology {
+.features {
   color: $lightBlack;
   padding-bottom: 10vh;
   margin: 0 auto;
-  flex-wrap: wrap;
+  max-width: 1600px;
+
+  @include respond-to("sm") {
+    .responsive-slick {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+  }
 
   @include respond-to("lg") {
     padding-bottom: 124px;
     width: 90vw;
+    display: block;
   }
 }
 
@@ -227,7 +143,7 @@ p {
 
   @include respond-to("lg") {
     width: 350px;
-    padding: 0;
+    padding: 0 15px;
   }
 
   .feature__item--image {
@@ -257,7 +173,18 @@ p {
 
 .technology {
   color: $lightBlack;
+  padding-bottom: 10vh;
+  margin: 0 auto;
+  max-width: 1600px;
+
   @include flexBetween;
+  flex-wrap: wrap;
+  @include respond-to("lg") {
+    height: 338px;
+    padding-bottom: 124px;
+    padding-left: 165px;
+    padding-right: 165px;
+  }
 
   .technology__item {
     text-align: center;
@@ -314,6 +241,8 @@ p {
 .red-section,
 .contact-section {
   padding: 5vw;
+  max-width: 1600px;
+  margin: 0 auto;
 
   @include respond-to("md") {
     @include flexCenter();
@@ -367,11 +296,17 @@ p {
   background: $lightBlack;
   @include flexCenter();
   flex-direction: column;
-  padding: 1vw;
+  padding: 2vw;
 
   img {
     width: 30%;
     margin: 0 auto;
     border-radius: 6px;
+  }
+  p {
+    margin-top: 2vw;
+  }
+  span {
+    font-size: 12px;
   }
 }
